# data-pipeline-engine

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: unit-tests.yml
configs/examples/: inspection.yaml  sample.csv  skew.yaml  transformation.yaml  validation.yaml
src/data_pipeline_engine/: __init__.py  __main__.py  config_loader.py  engine.py  types.py
src/data_pipeline_engine/cache_manager/: __init__.py  manager.py
src/data_pipeline_engine/expressions/: __init__.py  parser.py
src/data_pipeline_engine/inspection/: __init__.py  baseline.py  categorical_distribution_drift.py  comparison_utils.py  distinct_count.py  inspection.py  null_fraction.py  numeric_distribution_drift.py  row_count.py  types.py
src/data_pipeline_engine/models/: __init__.py  rules.py
src/data_pipeline_engine/transformation/: __init__.py  cast.py  deduplication.py  derive.py  drop.py  errors.py  expression.py  filter.py  normalize.py  rename.py  transformation.py
src/data_pipeline_engine/validation/: __init__.py  allow_empty.py  constraints.py  errors.py  primary_keys.py  row_boundaries.py  row_rules.py  schema.py  validation.py
tests/: test_cache_manager.py  test_cli_main.py  test_engine_pipeline_order.py  test_inspection_baseline.py  test_inspection_comparison_utils.py  test_inspection_metrics.py  test_inspection_rule_config.py  test_inspection_stage.py  test_stage_functions.py  test_transformation_rule_config.py  test_validation_rule_config.py  test_validation_stage.py
