[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-pipeline-engine"
version = "0.1.0"
description = "CSV data pipeline engine with YAML-driven validation, transformation, and inspection checks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6.0",
  "polars>=0.20.0",
  "PyYAML>=6.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "ruff>=0.6.0",
  "pyright>=1.1.390",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
pythonVersion = "3.10"
include = ["src"]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
